<resources>
    <string name="app_name">Malvina</string>
    <string name="login_input_hint">Email</string>
    <string name="password">Пароль</string>
    <string name="login">Вход</string>

    <string name="error_credentials_invalid">Неверная пара логин-пароль</string>
    <string name="error_network_failure">Ошибка соединения с сервером</string>
    <string name="error_field_required">Это поле необходимо</string>
    <string name="error_completing_order">Ошибка завершения заказа</string>
    <string name="error_unknown">Ой, что-то пошло не так..</string>

    <string name="retry">Повторить</string>
    <string name="empty_orders">Список заказов пуст</string>
    <string name="order_status_in_progress">Активный заказ</string>
    <string name="phone_empty">Номер не указан</string>
    <string name="customer_name_empty">Имя не указано</string>
    <string name="address_empty">Адрес не указан</string>
    <string name="add_address">Добавить адрес</string>
    <string name="address">Адрес</string>
    <string name="commentary">Комментарий</string>
    <string name="add_commentary">Добавить комментарий</string>
    <string name="currency">%1$s грн</string>
    <string name="price">Цена:</string>
    <string name="price_total">Всего:</string>
    <string name="quantity">Количество:</string>
    <string name="pcs">%1$d шт</string>
    <string name="count">Количество: %1$d шт.</string>
    <string name="count_total">Всего: %1$d шт.</string>
    <string name="count_available">Доступно: %1$d шт.</string>
    <string name="count_hold">Забронировано: %1$d шт.</string>
    <string name="order_delivered">Заказ доставлен</string>
    <string name="receiver">Получатель:</string>
    <string name="total_order_price">Сумма заказа:</string>
    <string name="order_received">Заказ получен</string>
    <string name="thank">Спасибо</string>
    <string name="order_completed">Заказ выполнен. Получатель: %1$s</string>
    <string name="return_to_order_list">Вернуться к списку</string>
    <string name="in_progress">В процессе. Ожидается ответ от сервера</string>
    <string name="phone_copied_to_clipboard">Номер телефона скопирован</string>
    <string name="cancel_order">Отказ от заказа</string>
    <string name="cancel_commentary">Комментраий к отказу</string>
    <string name="cancel_order_description">Добавьте, пожалуйста, комментраий к отказу от заказа</string>
    <string name="add_commentary_description">Здесь Вы можете добавить или изменить комментарий о получателе заказа</string>
    <string name="add_address_description">Здесь Вы можете добавить адрес доставки заказа</string>
    <string name="confirm">Подтвердить</string>
    <string name="orders">Orders</string>
    <string name="order_detail">Детали заказа</string>
    <string name="finishing_order">Завершение заказа</string>
    <string name="delivery">Доставка:</string>
    <string name="to_pay">К оплате:</string>
    <string name="start_dial">Набрать номер</string>
    <string name="storage">Storage</string>
    <string name="empty_storage">Склад пуст</string>
    <string name="order_number">Номер заказа: %1$s</string>
    <string name="elapsed_time">Пройденное время: %1$s</string>
    <string name="less_then_hour">менее часа</string>
    <string name="days">дн.</string>
    <string name="hours">ч.</string>
    <string name="pick_image">Pick Image</string>
    <string name="sandbox">Sandbox</string>
    <string name="learning_compose">Learning compose</string>
</resources>
