<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="product"
            type="com.kotsu.malvina.model.data.products.Product" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/product_card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_item_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/product_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:textSize="14sp"
                android:ellipsize="end"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/product_item_count"
                app:layout_constraintVertical_bias="0"
                android:layout_marginBottom="8dp"
                android:text="@{product.name}"
                style="@style/TextTitle"
                tools:text="Product long long long long long long long long long long long long long lonmg long long long long long long long long name"/>

            <TextView
                android:id="@+id/product_item_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintStart_toStartOf="@id/product_item_title"
                app:layout_constraintBottom_toTopOf="@id/product_item_price"
                android:text="@string/quantity"
                tools:text="Количество:" />

            <TextView
                android:id="@+id/product_item_count_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@id/product_item_price_total_value"
                app:layout_constraintBottom_toBottomOf="@id/product_item_count"
                android:text="@{@string/pcs(product.count)}"
                tools:text="5 шт" />

            <TextView
                android:id="@+id/product_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/product_item_title"
                app:layout_constraintBottom_toTopOf="@id/product_item_price_total"
                android:text="@string/price"
                tools:text="Цена:" />

            <TextView
                android:id="@+id/product_item_price_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@id/product_item_price_total_value"
                app:layout_constraintBottom_toBottomOf="@id/product_item_price"
                setProductPrice="@{product.price}"
                tools:text="100 грн"/>

            <TextView
                android:id="@+id/product_item_price_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/product_item_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/price_total"
                tools:text="Всего:" />

            <TextView
                android:id="@+id/product_item_price_total_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/product_item_price_total"
                setProductPrice="@{product.price * product.count}"
                tools:text="500 грн" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>