<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kotsu.malvina.ui.ordercomplete.CompleteOrderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:isGone="@{safeUnbox(viewModel.isLoading) || safeUnbox(viewModel.isLoadingError)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{@string/order_number(viewModel.order.code)}"
                android:textAlignment="textEnd"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="#3305" />

            <!--Complete order -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/complete_order_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:isGone="@{viewModel.isOrderCompleted}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/code">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/product_list_simple"
                    setProducts="@{viewModel.order.products}"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    app:layout_constraintBottom_toTopOf="@id/receiver"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0"
                    tools:listitem="@layout/product_list_item_simple" />

                <TextView
                    android:id="@+id/receiver"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/receiver"
                    app:layout_constraintBottom_toTopOf="@id/total_order_price"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/phone" />

                <TextView
                    android:id="@+id/phone"
                    setPhone="@{viewModel.order.recipient.phoneFormatted}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:maxLines="1"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/receiver"
                    tools:text="+0(123)456-78-90" />

                <TextView
                    android:id="@+id/total_order_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/total_order_price"
                    app:layout_constraintBottom_toTopOf="@id/delivery_price_title"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintLeft_toLeftOf="@id/receiver"
                    app:layout_constraintRight_toLeftOf="@id/price" />

                <TextView
                    android:id="@+id/price"
                    setOrderPrice="@{viewModel.order.price}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"
                    app:layout_constraintRight_toRightOf="@id/phone"
                    app:layout_constraintTop_toTopOf="@id/total_order_price"
                    tools:text="250грн" />

                <TextView
                    android:id="@+id/delivery_price_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/delivery"
                    app:layout_constraintBottom_toTopOf="@id/total_to_pay"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintLeft_toLeftOf="@id/receiver"
                    app:layout_constraintRight_toLeftOf="@id/delivery_price" />

                <TextView
                    android:id="@+id/delivery_price"
                    setOrderPrice="@{viewModel.order.deliveryPrice}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"
                    app:layout_constraintRight_toRightOf="@id/phone"
                    app:layout_constraintTop_toTopOf="@id/delivery_price_title"
                    tools:text="50грн" />

                <TextView
                    android:id="@+id/total_to_pay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/to_pay"
                    app:layout_constraintBottom_toTopOf="@id/finish_order"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintLeft_toLeftOf="@id/receiver"
                    app:layout_constraintRight_toLeftOf="@id/total_to_pay_price" />

                <TextView
                    android:id="@+id/total_to_pay_price"
                    setOrderPrice="@{viewModel.order.totalPrice}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"
                    app:layout_constraintRight_toRightOf="@id/phone"
                    app:layout_constraintTop_toTopOf="@id/total_to_pay"
                    tools:text="2250грн" />

                <Button
                    android:id="@+id/finish_order"
                    style="@style/ColoredButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:onClick="@{() -> viewModel.completeOrder()}"
                    android:text="@string/order_received"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintVertical_bias="100" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--Order completed layout-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/order_completed_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:isGone="@{!viewModel.isOrderCompleted}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/code">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/order_finished_title"
                        style="@style/TextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thank"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/order_finished_title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@{@string/order_completed(viewModel.order.recipient.name)}"
                        tools:text="Заказ выполнен. Получатель: Иван Иванов" />

                    <TextView
                        android:id="@+id/order_finished_price"
                        style="@style/TextTitle"
                        setOrderPrice="@{viewModel.order.price}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        tools:text="250 грн" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="@{() -> viewModel.navigateToOrderListScreen()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <ImageView
                        android:id="@+id/arrow_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:rotation="90"
                        app:layout_constraintBottom_toBottomOf="@id/return_to_list"
                        app:layout_constraintRight_toLeftOf="@id/return_to_list"
                        app:layout_constraintTop_toTopOf="@id/return_to_list"
                        app:srcCompat="@drawable/ic_arrow_down" />

                    <TextView
                        android:id="@+id/return_to_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/return_to_order_list"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Вернуться к списку" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:isGone="@{!viewModel.showProgressBar}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.kotsu.malvina.ui.customview.contentloading.ContentLoadingProgressView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setOnRetryClickListener="@{(view) -> viewModel.retry()}"
            app:showContentLoadingError="@{safeUnbox(viewModel.isLoadingError)}"
            app:showContentLoadingProgress="@{safeUnbox(viewModel.isLoading)}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>